# RDM

./: LICENSE  README.md
C version/: CMakeLists.txt  main.c  makefile
Python version/: main.py  model.py  optim.py
preprocessing/: data_tensor_save_20ns.py  data_tensor_save_ldd_small.py
